# otest

./: CMakeLists.txt  make.bat  run.bat
shaders/: f1.frag  v1.vert
src/: CMakeLists.txt  main.cpp
src/include/: Window.h
src/include/shader/: Shader.h
src/include/window/: Window.h
src/main/: main.cpp
src/shader/: Shader.cpp
src/window/: Window.cpp
